# -INFT2503-CPP-for-programmers

./: .gitignore
Assignment1/: CMakeLists.txt  fileInput.cpp  userInput.cpp
Assignment2/: CMakeLists.txt  task1.cpp  task4.cpp  task5.cpp  task6.cpp
Assignment3/: CMakeLists.txt  Commodity.cpp  Commodity.hpp  Task1_and2.cpp  Task4.cpp  task3.cpp
Assignment4/: CMakeLists.txt  Task1.cpp  Task2.cpp
Assignment5/: CMakeLists.txt  Task1.cpp  task2.cpp  test.cpp
Assignment7/: CMakeLists.txt  Fraction.cpp  Fraction.hpp  Set.cpp  Set.hpp  main.cpp  task1b.md
Assignment8/: CMakeLists.txt  Task1.cpp  Task2.cpp
Assignment9/: CMakeLists.txt  main.cpp
